test/files/neg/double-def-top-level/B_2.scala
class C /* noerror */
object O /* noerror */